Aggiunta la possibilità di modificare la modalità di pagamento sulla Reversale di Incasso